--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,15 @@
          <url-pattern>/parse/sentences</url-pattern>
      </servlet-mapping>
 
+    <servlet>
+        <servlet-name>ParseJsonLocationsServlet</servlet-name>
+        <servlet-class>org.mediameter.cliff.servlet.ParseJsonLocationsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ParseJsonLocationsServlet</servlet-name>
+        <url-pattern>/parse/locations</url-pattern>
+    </servlet-mapping>
+
      <servlet>
          <servlet-name>GeonamesLookupServlet</servlet-name>
          <servlet-class>org.mediameter.cliff.servlet.GeonamesLookupServlet</servlet-class>
@@ -49,6 +58,8 @@
          <servlet-name>ExtractTextServlet</servlet-name>
          <url-pattern>/extract</url-pattern>
      </servlet-mapping>
-     
+
+
+
 
  </web-app>
